--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <img src="/Project One/image/theme/thousand-01 1.png" alt="" class="img-fluid">
+                        <img src="./image/theme/thousand-01 1.png" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
